# cpp_gtest_example

./: CMakeLists.txt  README.md  main.cpp
include/: factorial.hpp
src/: factorial.cpp
tests/: tests-factorial.cpp
